[package]
name = "numsep"
version = "0.1.1"
edition = "2021"
author = "flopetautschnig (floscodes)"
description = "Adding thousands-seperators to numbers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/floscodes/rust-numsep"
keywords = ["thousands", "thousands-separators", "radix", "digit-grouping", "digits"]
categories = ["value-formatting", "text-processing", "visualization", "parsing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slicestring = "0.1.3"